// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeViewMenu should only render the matching results that contains "7" 1`] = `
<ListGroup
  tag="ul"
>
  <ListGroupItem
    active={true}
    hasSubItems={true}
    isOpen="7"
    key="releasenotes/desktop-modeler/7"
    level={2}
    onClick={[Function]}
  >
    7
  </ListGroupItem>
  <ListGroupItem
    active={false}
    hasSubItems={false}
    isOpen="7"
    key="releasenotes/desktop-modeler/7/7.0"
    level={3}
    onClick={[Function]}
  >
    7.0
  </ListGroupItem>
</ListGroup>
`;

exports[`TreeViewMenu should render the roots only 1`] = `
<ListGroup
  tag="ul"
>
  <ListGroupItem
    active={false}
    hasSubItems={true}
    isOpen=""
    key="releasenotes"
    level={0}
    onClick={[Function]}
  >
    Release Notes
  </ListGroupItem>
  <ListGroupItem
    active={false}
    hasSubItems={false}
    isOpen=""
    key="atd"
    level={0}
    onClick={[Function]}
  >
    ATS Guide
  </ListGroupItem>
</ListGroup>
`;
